--- a/styles.css
+++ b/styles.css
@@ -30,15 +30,9 @@ body {
   animation: bounce 2s infinite;
 }
 
-#snowman img {
-  display: block; /* لإزالة أي هوامش غير مرغوب فيها */
-  margin: 0 auto; /* التأكد من أن الصورة متمركزة */
+.snowman img {
   width: 100%;
   height: auto;
-  background: none; /* التأكد من عدم وجود خلفية */
-  border: none; /* إزالة أي إطار افتراضي */
-  pointer-events: none; /* منع التفاعل مع الحواف */
-}
 /* الرسالة */
 .hidden {
   display: none;
