--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
   padding: 0;
   overflow: hidden;
   font-family: 'Arial', sans-serif;
-  background: url('https://i.ibb.co/2Wq8kb7/copilot-image-1735475531690.jpg') no-repeat center center fixed;
+  background: url('https://files.catbox.moe/x5scue.mp4') no-repeat center center fixed;
   background-size: cover;
 }
 /* الرسالة الترحيبية */
